--- a/TypeNat.cabal
+++ b/TypeNat.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                TypeNat
-version:             0.2.1.0
+version:             0.3.0.0
 synopsis:            Some Nat-indexed types for GHC
 -- description:         
 homepage:            https://github.com/avieth/TypeNat
@@ -18,7 +18,19 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Data.TypeNat.Fin, Data.TypeNat.Nat, Data.TypeNat.Vect
   -- other-modules:       
-  other-extensions:    DataKinds, KindSignatures, GADTs, Rank2Types
-  build-depends:       base >=4.7 && <4.8
+  other-extensions:    DataKinds
+                     , KindSignatures
+                     , GADTs
+                     , RankNTypes
+                     , MultiParamTypeClasses
+                     , FlexibleInstances
+                     , FlexibleContexts
+                     , ScopedTypeVariables
+                     , IncoherentInstances
+                     , ConstraintKinds
+                     , TypeFamilies
+                     , KindSignatures
+
+  build-depends:       base >=4.7 && < 4.8
   -- hs-source-dirs:      
   default-language:    Haskell2010
