--- a/TypeNat.cabal
+++ b/TypeNat.cabal
@@ -10,10 +10,14 @@ license:             MIT
 license-file:        LICENSE
 author:              Alexander Vieth
 maintainer:          aovieth@gmail.com
--- copyright:           
+copyright:           MIT
 category:            Data
 build-type:          Simple
 cabal-version:       >=1.10
+
+source-repository head
+  type: git
+  location: http://github.com/avieth/TypeNat.git
 
 library
   exposed-modules:     Data.TypeNat.Fin, Data.TypeNat.Nat, Data.TypeNat.Vect
